--- a/styles.css
+++ b/styles.css
@@ -130,8 +130,8 @@ html {
         z-index: 5;
         display: flex;
         flex-direction: row;
-        margin: 112% 0% 0% 36%;
-        width: 25%;
+        margin: 112% 0% 0% 22%;
+        width: auto;
         justify-content: space-evenly;
     }
 
@@ -238,6 +238,7 @@ html {
     .bora {
         display: flex;
         position: absolute;
+        width: 100%;
         margin: 87% 0% 0% 15%;
         #chamada {
             direction: ltr;
