--- a/styles.css
+++ b/styles.css
@@ -89,7 +89,6 @@ html {
 @media (orientation: portrait) { /* para formato retrato */
 
     .home {
-        width: auto;
         margin: 1%;
         width: fit-content;
         display: flex;
@@ -241,6 +240,7 @@ html {
         position: absolute;
         width: 100%;
         margin: 87% 0% 0% 15%;
+        z-index: 5;
         #chamada {
             direction: ltr;
             font-family: 'fonte-geral', monospace;
@@ -259,8 +259,9 @@ html {
         position: absolute;
         flex-direction: row;
         align-items: center;
-        margin: 116% 5% 5% 3%;
+        margin: 116% 5% 5% 2%;
         line-height: 8em;
+        z-index: 6;
     }
 
     #siga-nos {
@@ -300,7 +301,7 @@ html {
         width: 46%;
         font-weight: 500;
         font-size: 118%;
-        margin: 1% 0% 3% 7%;
+        margin: 1% 0% 3% 8%;
     }
 
     .sociais-inicio {
@@ -351,7 +352,7 @@ html {
     
         #logo-fim {
             width: 33%;
-            margin: 1% 0% 0% 12%;
+            margin: 3% 0% 0% 12%;
             position: absolute;
             z-index: 6;
         }
@@ -369,7 +370,7 @@ html {
             width: 45%;
             display: flex;
             position: relative;
-            margin: 15% 0% 0% 50%;
+            margin: 10.6% 0% 0% 50%;
     
             #eu {
                 position: absolute;
@@ -426,9 +427,9 @@ html {
         .bora {
             display: flex;
             align-items: center;
-            justify-content: center;
-            margin: 30.5% 0% 2% -8%;
-    
+            margin: 32% 0% 2% 38%;
+            position: absolute;
+            z-index: 5;
             #chamada {
                 direction: ltr;
                 font-family: 'fonte-geral', monospace;
@@ -445,13 +446,11 @@ html {
             display: flex;
             flex-direction: row;
             align-items: center;
-            margin: 0% 0% 0% 12%;
-            width: 40%;
+            margin: 30% 0% 0% 12%;
+            width: 12%;
             min-height: 39%;
-    
-            img {
-                width: 15%;
-            }
+            position: absolute;
+            z-index: 6; 
         }
     
         #siga-nos {
