--- a/styles.css
+++ b/styles.css
@@ -244,6 +244,7 @@ html {
         position: absolute;
         width: 100%;
         margin: 87% 0% 0% 15%;
+        padding-right: -15%;
         z-index: 5;
         #chamada {
             direction: ltr;
