--- a/styles.css
+++ b/styles.css
@@ -128,6 +128,7 @@ html {
         flex-direction: row;
         margin: 112% 0% 0% 17%;
         height: 10%;
+        max-width: 100%;
         justify-content: space-evenly;
     }
 
@@ -256,6 +257,7 @@ html {
         flex-direction: row;
         align-items: center;
         margin: 116% 5% 5% 2%;
+        max-width: 100%;
         line-height: 8em;
         z-index: 6;
     }
