--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body {
     background-image: url(images/background.png);
-    padding: 0% 10%;
+    padding: 0% 0%;
     background-size: cover;
 }
 
@@ -83,196 +83,202 @@ html {
     src: url(fonts/OpenSans-VariableFont_wdth,wght.ttf);
 }
 
+@media (max-width: 640px) {}
+
 @media (orientation: portrait) {
     /* para formato retrato */
-    @media (max-width: 640px) {
-
-        /* inicio home retrato */
-        .home {
-            margin: 1%;
-            width: fit-content;
-            display: flex;
-        }
 
 
-        #logo-inicio {
-            width: 80%;
-        }
-
-        .logo {
-            margin: 5% 0% 5% 8%;
-            position: relative;
-        }
-
-        #descricao {
-            width: 85%;
-            font-weight: 300;
-            font-size: 120%;
-            margin: 0% 0% 5% 8%;
-        }
-
-        .musica-inicio {
-            display: flex;
-            flex-direction: column;
-            margin: 10% 0% 0% 83%;
-            width: 8.5%;
-            position: absolute;
-            z-index: 0;
-        }
-
-        .sociais-inicio {
-            position: absolute;
-            z-index: 5;
-            display: flex;
-            flex-direction: row;
-            margin: 112% 0% 0% 17%;
-            height: 10%;
-            max-width: 80%;
-            justify-content: space-evenly;
-        }
-
-        .video-pc {
-            display: none;
-            width: 0%;
-        }
-
-        .video {
-            aspect-ratio: 9/16;
-            margin: -107.25% 0% 0% 2.5%;
-            width: 95%;
-            height: 95%;
-        }
-
-        /* inicio carrossel retrato */
-        .carrossel {
-            display: flex;
-            flex-direction: row;
-            flex-wrap: wrap;
-            margin: 13% 0% 10% 2.5%;
-            width: 95%;
-            height: 100vh;
-        }
-
-        /* inicio contatos retrato */
-
-        .contatos {
-            display: flex;
-            margin-top: 10%;
-        }
-
-        #logo-fim {
-            display: none;
-            width: 0%;
-        }
-
-        .musica-fim {
-            display: flex;
-            flex-direction: column;
-            width: 8.5%;
-            margin: 5% 0% 0% 79.7%;
-            position: absolute;
-            z-index: 5;
-        }
-
-        .sobrepostos {
-            display: flex;
-            position: relative;
-            width: 88%;
-            margin: 0% 0% 0% 0%;
-
-            #eu {
-                position: absolute;
-                margin-left: -2%;
-                z-index: 0;
-                width: 100%;
-            }
-
-            #quadro {
-                width: 76%;
-                margin: -6% 0% 0% 20%;
-                position: absolute;
-                z-index: 1;
-            }
-
-            #parte-do-show {
-                position: absolute;
-                z-index: 2;
-                line-height: 1.261em;
-                font-family: 'fonte-economica', monospace;
-                text-align: center;
-                margin: 60.5% 0% 0% 35%;
-                font-weight: 300;
-                font-size: 100%;
-                letter-spacing: 0.05em;
-                text-shadow: 0.0441em 0.0606em 0.0125em rgba(0, 0, 0, 0.300000);
-            }
-
-            #toque {
-                position: absolute;
-                z-index: 3;
-                font-size: 80%;
-                direction: ltr;
-                font-family: 'fonte-geral', monospace;
-                text-align: center;
-                margin-left: 36%;
-                margin-top: 80%;
-                line-height: 100%;
-                text-transform: none;
-                letter-spacing: -0.05em;
-            }
-
-            #ej200 {
-                position: absolute;
-                z-index: 4;
-                width: 20%;
-                margin-left: 30%;
-                margin: 68% 0% 0% 48%;
-                transform: rotate(-25deg);
-            }
-        }
-
-        .bora {
-            display: flex;
-            position: absolute;
-            width: 100%;
-            margin: 87% 0% 0% 5%;
-            z-index: 5;
-
-            #chamada {
-                direction: ltr;
-                font-family: 'fonte-geral', monospace;
-                text-align: center;
-                line-height: 1.3em;
-                text-transform: none;
-                letter-spacing: 0.02em;
-                font-weight: 350;
-                font-size: 100%;
-            }
-        }
-
-        .sociais-fim {
-            width: auto;
-            display: flex;
-            position: absolute;
-            justify-content: center;
-            align-items: center;
-            margin: 116% 5% 5% 0%;
-            max-width: 100%;
-            line-height: 8em;
-            z-index: 6;
-
-            #siga-nos {
-                margin-right: 5%;
-                font-family: 'fonte-geral', monospace;
-                text-transform: none;
-                flex: 1;
-                flex-grow: 1;
-                flex-shrink: 0;
-                white-space: nowrap;
-            }
-        }
-
+    /* inicio home retrato */
+    .home {
+        margin: 1%;
+        width: fit-content;
+        display: flex;
     }
+
+
+    #logo-inicio {
+        width: 80%;
+    }
+
+    .logo {
+        margin: 5% 0% 5% 8%;
+        position: relative;
+    }
+
+    #descricao {
+        width: 85%;
+        font-weight: 300;
+        font-size: 120%;
+        margin: 0% 0% 5% 8%;
+    }
+
+    .musica-inicio {
+        display: flex;
+        flex-direction: column;
+        margin: 10% 0% 0% 83%;
+        width: 8.5%;
+        position: absolute;
+        z-index: 0;
+    }
+
+    .sociais-inicio {
+        position: absolute;
+        z-index: 5;
+        display: flex;
+        flex-direction: row;
+        margin: 112% 0% 0% 17%;
+        height: 10%;
+        max-width: 80%;
+        justify-content: space-evenly;
+    }
+
+    .video-pc {
+        display: none;
+        width: 0%;
+    }
+
+    .video {
+        aspect-ratio: 9/16;
+        margin: -107.25% 0% 0% 2.5%;
+        width: 95%;
+        height: 95%;
+    }
+
+    /* inicio carrossel retrato */
+    .carrossel {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        margin: 13% 0% 10% 2.5%;
+        width: 95%;
+        height: 100vh;
+    }
+
+    /* inicio contatos retrato */
+
+    .contatos {
+        display: flex;
+        margin-top: 10%;
+    }
+
+    #logo-fim {
+        display: none;
+        width: 0%;
+    }
+
+    .musica-fim {
+        display: flex;
+        flex-direction: column;
+        width: 8.5%;
+        margin: 5% 0% 0% 79.7%;
+        position: absolute;
+        z-index: 5;
+    }
+
+    .sobrepostos {
+        display: flex;
+        position: relative;
+        width: 88%;
+        margin: 0% 0% 0% 0%;
+
+        #eu {
+            position: absolute;
+            margin-left: -2%;
+            z-index: 0;
+            width: 100%;
+        }
+
+        #quadro {
+            width: 76%;
+            margin: -6% 0% 0% 20%;
+            position: absolute;
+            z-index: 1;
+        }
+
+        #parte-do-show {
+            position: absolute;
+            z-index: 2;
+            line-height: 1.261em;
+            font-family: 'fonte-economica', monospace;
+            text-align: center;
+            margin: 60.5% 0% 0% 35%;
+            font-weight: 300;
+            font-size: 100%;
+            letter-spacing: 0.05em;
+            text-shadow: 0.0441em 0.0606em 0.0125em rgba(0, 0, 0, 0.300000);
+        }
+
+        #toque {
+            position: absolute;
+            z-index: 3;
+            font-size: 80%;
+            direction: ltr;
+            font-family: 'fonte-geral', monospace;
+            text-align: center;
+            margin-left: 36%;
+            margin-top: 80%;
+            line-height: 100%;
+            text-transform: none;
+            letter-spacing: -0.05em;
+        }
+
+        #ej200 {
+            position: absolute;
+            z-index: 4;
+            width: 20%;
+            margin-left: 30%;
+            margin: 68% 0% 0% 48%;
+            transform: rotate(-25deg);
+        }
+    }
+
+    .bora {
+        display: flex;
+        position: absolute;
+        width: 100%;
+        margin: 87% 0% 0% 5%;
+        z-index: 5;
+
+        #chamada {
+            direction: ltr;
+            font-family: 'fonte-geral', monospace;
+            text-align: center;
+            line-height: 1.3em;
+            text-transform: none;
+            letter-spacing: 0.02em;
+            font-weight: 350;
+            font-size: 100%;
+        }
+    }
+
+    .sociais-fim {
+        width: 640px;
+        display: flex;
+        position: absolute;
+        align-items: center;
+        justify-content: center;
+        margin: 116% 5% 5% 0%;
+        max-width: 5%;
+        line-height: 8em;
+        z-index: 6;
+
+        #img {
+            width: 2%;
+        }
+
+        #siga-nos {
+            margin-right: 5%;
+            font-family: 'fonte-geral', monospace;
+            text-transform: none;
+            flex: 1;
+            flex-grow: 1;
+            flex-shrink: 0;
+            white-space: nowrap;
+        }
+    }
+
+
 }
 
 @media (orientation: landscape) {
@@ -311,12 +317,7 @@ html {
         display: flex;
         flex-direction: row;
         margin: 36.5% 0% 0% 13%;
-        width: 35%;
         justify-content: space-evenly;
-
-        img {
-            width: 15%;
-        }
     }
 
     .video {
