--- a/styles.css
+++ b/styles.css
@@ -60,13 +60,14 @@ button {
     text-shadow: 0.044em 0.06em 0.0125em rgba(0, 0, 0, 0.300000);
 }
 
-@import "main";
-
 html {
     height: 100%;
     min-height: 100%;
 }
 
+.topo {
+    width:fit-content;
+}
 
 @font-face {
     font-family: fonte-titulos;
@@ -95,7 +96,6 @@ html {
         width: fit-content;
         display: flex;
     }
-
 
     #logo-inicio {
         width: 80%;
@@ -291,7 +291,7 @@ html {
     }
 
     #logo-inicio {
-        width: 35%;
+        max-width: 59%;
     }
 
     .logo {
@@ -307,11 +307,13 @@ html {
     }
 
     .sociais-inicio {
+        width: 32%;
         position: absolute;
         z-index: 5;
         display: flex;
         flex-direction: row;
-        margin: 36.5% 0% 0% 13%;
+        margin: 36.5% 0% 0% 15%;
+        align-items: center;
         justify-content: space-evenly;
     }
 
@@ -463,8 +465,18 @@ html {
     }
 }
 
+.logo {
+    width: 50%;
+}
+
+.sociais-inicio {
+    img {
+        width: 100%;
+    }
+}
+
 .sociais-fim {
-    img{
+    img {
         width: 100%;
     }
 }
