--- a/styles.css
+++ b/styles.css
@@ -140,14 +140,18 @@ html {
         z-index: 0;
     }
 
+    
+.space-h {
+    margin-right: 5%;
+}
+
     .sociais-inicio {
         position: absolute;
         z-index: 5;
         display: flex;
         flex-direction: row;
-        margin: 102% 0% 0% 48%;
-        padding: 1%;
-        max-width: 6%;
+        margin: 102% 0% 0% 46%;
+        max-width: 3%;
         justify-content: space-evenly;
     }
 
@@ -259,7 +263,7 @@ html {
         display: flex;
         position: absolute;
         width: 100%;
-        margin: 87% 0% 0% 4%;
+        margin: 87% 0% 0% 4.5%;
         z-index: 5;
 
         #chamada {
@@ -278,7 +282,7 @@ html {
         display: flex;
         max-width: 35%;
         align-items: center;
-        margin: 101% 0% 0% 1%; 
+        margin: 101.5% 0% 0% 1%; 
         padding-bottom: 3%;       
         position: absolute;
         z-index: 6;
