--- a/styles.css
+++ b/styles.css
@@ -53,8 +53,10 @@ button {
 }
 
 .sociais-inicio {
+    width: -moz- 150%;
     img {
         width: 100%;
+        height: 100%;
     }
 }
 
@@ -335,13 +337,14 @@ html {
     #descricao {
         width: 46%;
         font-weight: 500;
+        font-size: -moz- 115%;
         font-size: 118%;
         margin: 1% 0% 3% 8%;
     }
 
     .sociais-inicio {
         width: 32%;
-        -moz-width: 50%;
+        -moz-width: 80%;
         position: absolute;
         z-index: 5;
         display: flex;
