--- a/styles.css
+++ b/styles.css
@@ -64,6 +64,7 @@ button {
         width: 20%;
     }
 }
+
 #bem-vindo {
     font-family: fonte-titulos;
     letter-spacing: 0.08em;
@@ -141,10 +142,10 @@ html {
         z-index: 0;
     }
 
-    
-.space-h {
-    margin-right: 20%;
-}
+
+    .space-h {
+        margin-right: 20%;
+    }
 
     .sociais-inicio {
         position: absolute;
@@ -285,14 +286,14 @@ html {
         max-width: 10%;
         -moz-max-width: 50%;
         align-items: center;
-        margin: 101.5% 0% 0% 2%; 
-        padding-bottom: 3%;       
+        margin: 101.5% 0% 0% 2%;
+        padding-bottom: 3%;
         position: absolute;
         z-index: 6;
     }
 
     .button-fim {
-        margin: 125% 0% 0% 21%; 
+        margin: 125% 0% 0% 21%;
         padding: 8%;
         position: absolute;
         z-index: 11;
@@ -316,6 +317,7 @@ html {
     body {
         margin-bottom: 200px;
     }
+
     /* inicio home paisagem */
     .home {
         display: flex;
@@ -411,6 +413,7 @@ html {
             display: flex;
             position: relative;
             margin: 5% 0% 0% 50%;
+
             #eu {
                 position: absolute;
                 margin-left: -6%;
@@ -484,7 +487,7 @@ html {
             display: flex;
             max-width: 20%;
             align-items: center;
-            margin: 37.1% 0% 0% 10%;        
+            margin: 37.1% 0% 0% 10%;
             position: absolute;
             z-index: 6;
         }
@@ -501,3 +504,199 @@ html {
     }
 }
 
+
+/* para tablet formato paisagem */
+@media (min-width: 768px) and (orientation: landscape) {
+    body {
+        margin-bottom: 200px;
+    }
+
+    /* inicio home tablet paisagem */
+    .home {
+        display: flex;
+        margin: 1%;
+    }
+
+    #bem-vindo {
+        margin: 0% 0% 0% 7%;
+    }
+
+    #logo-inicio {
+        max-width: 69%;
+    }
+
+    .logo {
+        margin: 5% 0% 0% 8%;
+        position: relative;
+    }
+
+    #descricao {
+        width: 46%;
+        font-weight: 500;
+        font-size: 118%;
+        margin: 5% 0% 3% 2%;
+    }
+
+    .sociais-inicio {
+        width: 32%;
+        position: absolute;
+        z-index: 5;
+        display: flex;
+        flex-direction: row;
+        margin: 40% 0% 0% 9%;
+        align-items: center;
+        justify-content: space-evenly;
+    }
+
+    .button-inicio {
+        padding: 7% 7% 7% 7%;
+        margin-left: 2%;
+    }
+
+    .video {
+        display: none;
+    }
+
+    .video-pc {
+        aspect-ratio: 9/16;
+        margin: 2% 0% 0% 17%;
+        height: 80%;
+        position: absolute;
+    }
+
+    .musica-inicio {
+        display: flex;
+        flex-direction: column;
+        margin: 1% 0% 0% 83.5%;
+        width: 3.5%;
+        position: absolute;
+        z-index: 0;
+    }
+
+
+    /* inicio carrossel tablet paisagem */
+    .carrossel {
+        display: flex;
+        margin: 30% 0% 0% 0%;
+        width: 90%;
+        height: 100vh;
+    }
+
+    /* inicio contatos tablet paisagem */
+    .contatos {
+
+        #logo-fim {
+            width: 33%;
+            margin: 3% 0% 0% 5%;
+            position: absolute;
+            z-index: 6;
+        }
+
+        .musica-fim {
+            display: flex;
+            flex-direction: column;
+            width: 3.6%;
+            margin: 3% 0% 0% 83.6%;
+            position: absolute;
+            z-index: 5;
+        }
+
+        .sobrepostos {
+            width: 45%;
+            display: flex;
+            position: relative;
+            margin: 5% 0% 0% 45%;
+
+            #eu {
+                position: absolute;
+                margin-left: -6%;
+                z-index: 0;
+                width: 100%;
+            }
+
+            #quadro {
+                width: 76%;
+                margin: -5% 0% 0% 15%;
+                position: absolute;
+                z-index: 1;
+            }
+
+            #parte-do-show {
+                position: absolute;
+                z-index: 2;
+                line-height: 1.261em;
+                font-family: 'fonte-economica', monospace;
+                text-align: center;
+                margin-left: 40%;
+                margin-top: 60.5%;
+                font-weight: 300;
+                font-size: 120%;
+                letter-spacing: 0.05em;
+                text-shadow: 0.0441em 0.0606em 0.0125em rgba(0, 0, 0, 0.300000);
+            }
+
+            #toque {
+                position: absolute;
+                z-index: 3;
+                font-size: 106%;
+                direction: ltr;
+                font-family: 'fonte-geral', monospace;
+                text-align: center;
+                margin: 81% 0% 0% 39%;
+                line-height: 100%;
+                text-transform: none;
+                letter-spacing: -0.05em;
+            }
+
+            #ej200 {
+                position: absolute;
+                z-index: 4;
+                width: 21%;
+                margin: 68% 0% 0% 43%;
+                transform: rotate(-25deg);
+            }
+        }
+
+        .bora {
+            display: flex;
+            align-items: center;
+            margin: 32% 0% 2% 28%;
+            position: absolute;
+            z-index: 5;
+
+            #chamada {
+                direction: ltr;
+                font-family: 'fonte-geral', monospace;
+                text-align: center;
+                line-height: 1.3em;
+                text-transform: none;
+                letter-spacing: -0.05em;
+                font-weight: 500;
+                font-size: 102%;
+            }
+        }
+
+       #garanta{
+        margin: 38.2% 0% 0% 31%;
+       }
+
+        .sociais-fim {
+            display: flex;
+            max-width: 20%;
+            align-items: center;
+            margin: 38% 0% 0% 5%;
+            position: absolute;
+            z-index: 6;
+        }
+
+        #siga-nos {
+            margin-right: 5%;
+            font-family: 'fonte-geral', monospace;
+            text-transform: none;
+            flex: 1;
+            flex-grow: 1;
+            flex-shrink: 0;
+            white-space: nowrap;
+        }
+    }
+}
