--- a/styles.css
+++ b/styles.css
@@ -507,8 +507,11 @@ html {
 
 /* para tablet formato paisagem */
 @media (min-width: 768px) and (orientation: landscape) {
+   
     body {
         margin-bottom: 200px;
+        width: 1280px;
+        height: 800px;
     }
 
     /* inicio home tablet paisagem */
