--- a/styles.css
+++ b/styles.css
@@ -382,7 +382,7 @@ html {
     /* inicio carrossel paisagem */
     .carrossel {
         display: flex;
-        margin: 25% 0% 0% 0%;
+        margin: 30% 0% 0% 0%;
         width: 100%;
         height: 120vh;
     }
@@ -504,7 +504,7 @@ html {
 
 
 /* para tablet formato paisagem */
-@media (min-width: 768px) and (orientation: landscape) {
+@media (min-width: 768px) and (max-width:1024px) and (orientation: landscape) {
    
     body {
         margin-bottom: 200px;
@@ -699,3 +699,29 @@ html {
         }
     }
 }
+
+@media (min-width:481px) and (max-width:768px){
+
+
+    .sociais-fim{
+       position: absolute;
+       top: 240%;
+    }
+    .button-fim{
+    
+    margin-top: 70%;
+    margin-left: 65%;
+    
+    }
+    .bora{
+        position: absolute;
+       top: 230%;
+    }
+    
+    .sociais-inicio{
+        position: absolute;
+        top: 30%;
+        left: 10%;
+    }  
+    
+    }
