--- a/styles.css
+++ b/styles.css
@@ -122,12 +122,13 @@ html {
     }
 
     .logo {
-        margin: 5% 0% 5% 8%;
+        max-width: 100%;
+        margin: 5% 0% 0% 25%;
         position: relative;
     }
 
     #descricao {
-        width: 87%;
+        width: 87.5%;
         font-weight: 300;
         font-size: 120%;
         margin: 18% 0% 5% 7%;
@@ -140,7 +141,7 @@ html {
     .musica-inicio {
         display: flex;
         flex-direction: column;
-        margin: 0% 0% 0% 83%;
+        margin: 0% 0% 0% 82%;
         width: 11.5%;
         position: absolute;
         z-index: 0;
@@ -156,7 +157,7 @@ html {
         z-index: 5;
         display: flex;
         flex-direction: row;
-        margin: 123.5% 0% 0% 40%;
+        margin: 123.5% 0% 0% 41%;
         max-width: 15%;
         justify-content: space-evenly;
     }
