--- a/carrossel.css
+++ b/carrossel.css
@@ -238,6 +238,7 @@ img {
 }
 
 .swiper-virtual .swiper-slide {
+  backface-visibility: inherit;
   -webkit-backface-visibility: hidden;
   transform: translateZ(0)
 }
@@ -519,6 +520,7 @@ button.swiper-pagination-bullet {
 .swiper-scrollbar {
   border-radius: 10px;
   position: relative;
+  touch-action: inherit;
   -ms-touch-action: none;
   background: rgba(0, 0, 0, .1)
 }
